dfir_rs/tests/compile-fail-stable/surface_lattice_fold_noarg.stderr
error: `lattice_fold` should have exactly 0 generic type arguments, actually has 1.
 --> tests/compile-fail-stable/surface_lattice_fold_noarg.rs:6:31
  |
6 |             -> lattice_fold::<dfir_rs::lattices::set_union::SetUnionHashSet<u32>>()
  |                               ^^^^^^^

error: `lattice_fold` expects 1 argument(s), received 0.
 --> tests/compile-fail-stable/surface_lattice_fold_noarg.rs:6:16
  |
6 |             -> lattice_fold::<dfir_rs::lattices::set_union::SetUnionHashSet<u32>>()
  |                ^^^^^^^^^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_lattice_fold_noarg.rs:9:8
  |
9 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
